--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-Hello world
+Experienced full-stack software engineer with 7+ years of experience. 
+I specialize in designing and implementing SaaS solutions using JavaScript, React, Java, Spring, MongoDB, MySQL, and AWS services.
