--- a/index.html
+++ b/index.html
@@ -1,2 +1,54 @@
-Experienced full-stack software engineer with 7+ years of experience. 
-I specialize in designing and implementing SaaS solutions using JavaScript, React, Java, Spring, MongoDB, MySQL, and AWS services.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chris Ortiz</title>
+    <style>
+        body {
+            background-color: #d3d3d3;
+            color: #333;
+            font-family: Arial, sans-serif;
+            padding: 20px;
+            max-width: 600px;
+            margin: auto;
+        }
+        h1 {
+            text-align: left;
+        }
+        p, ul {
+            background-color: #fff;
+            padding: 15px;
+            border-radius: 5px;
+        }
+        p, li {
+            text-align: left;
+        }
+        ul {
+            margin-top: 20px;
+            padding-left: 20px;
+            list-style-type: square;
+        }
+        li {
+            margin-bottom: 10px;
+        }
+        @media (max-width: 600px) {
+            body {
+                padding: 10px;
+            }
+        }
+    </style>
+</head>
+<body>
+<h1>Chris Ortiz</h1>
+<p>Full-stack software engineer with 8+ years of experience.</p>
+<ul>
+    <li>Designing and implementing SaaS solutions</li>
+    <li>JavaScript + React </li>
+    <li>Java + Spring </li>
+    <li>MongoDB</li>
+    <li>MySQL</li>
+    <li>AWS services</li>
+</ul>
+</body>
+</html>
